Publication.titles is a LinkedHashSet